# jarvis

./: .clinerule  .clinerules  .gitignore  .windsurfrules  AGENTS.md  README.md  index.html  skills-lock.json
agents/: README.md  (+11 more)
atlassian-knowledge-graph/: .gitignore  AGENTS.md  README.md  env.template  pyproject.toml
atlassian-knowledge-graph/atlassian_kg/: __init__.py  atlassian.py  cli.py  config.py  content.py  graph.py  models.py  ontology.py  pipeline.py  sample_data.py  server.py  storage.py
atlassian-knowledge-graph/configs/: ontology.v1.json
atlassian-knowledge-graph/docs/: intranet-deployment.md  work-log.md
atlassian-knowledge-graph/scripts/: deploy-intranet.ps1
atlassian-knowledge-graph/tests/: test_config.py  test_content.py  test_pipeline.py
atlassian-knowledge-graph/web/: app.js  index.html  styles.css
stock-auto-trader/: AGENTS.md  README.md  pyproject.toml
stock-auto-trader/configs/: trader.example.json
stock-auto-trader/data/: sample_candles.csv
stock-auto-trader/docs/: 100-scenario-realistic-tradability-matrix.md  45day-consecutive-extreme-success-scenario.md  45day-consecutive-liquidity-reality-check.md  45day-consecutive-nasdaq-universe-success.md  45day-extreme-goal-seeking-scenario.md  45day-paper-trading-scenario.md  45day-portfolio-2to5-liquidity-search.md  8-extreme-success-realistic-candidate-review.md  advanced-monitoring-architecture.md  auto-trader-mvp.md  cycle-optimization-10-tests.md  episodic-memory-jarvis-trader-mvp.md  final-realistic-achievable-scenario.md  market-dashboard.md  real-time-virtual-training-arena.md  (+2 more)
(+527 files in other folders)
