[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-knowledge-graph"
version = "0.1.0"
description = "Local-first Confluence knowledge graph dashboard for AI training and work idea discovery."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
atlassian-kg = "atlassian_kg.cli:main"

[tool.setuptools.packages.find]
include = ["atlassian_kg*"]
