[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-trader"
version = "0.1.0"
description = "Safety-first agent team stock trading simulator with future broker API adapters."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
jarvis-trader = "jarvis_trader.cli:main"

[tool.setuptools.packages.find]
include = ["jarvis_trader*"]
